kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devsecops-app

  template:
    metadata:
      labels:
        app: devsecops-app

    spec:
      containers:
      - name: app
        image: <ECR_URL>:latest
        ports:
        - containerPort: 8080
